Bug 1194892 -  [css-grid] "span * / span *" should be treated as "auto / auto" for abs.pos. grid items.  r=dholbert